--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.grocerymanager">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryManager">
-        <activity android:name=".Notification_ON_time"></activity>
+        <activity android:name=".TutorialSteps"></activity>
+        <activity android:name=".Notification_ON_time" />
         <activity android:name=".Register" />
         <activity android:name=".Login" />
         <activity android:name=".Welcome">
@@ -29,14 +30,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Lunch_activity" />
 
-        <activity android:name=".Lunch_activity"/>
-        <receiver android:name=".Notification_receiver_lunch"/>
-        <activity android:name=".Breakfast_activity"/>
-        <receiver android:name=".Notification_receiver_break"/>
-        <activity android:name=".Dinner_activity"/>
-        <receiver android:name=".Notification_receiver_Dinner"/>
+        <receiver android:name=".Notification_receiver_lunch" />
 
+        <activity android:name=".Breakfast_activity" />
+
+        <receiver android:name=".Notification_receiver_break" />
+
+        <activity android:name=".Dinner_activity" />
+
+        <receiver android:name=".Notification_receiver_Dinner" />
     </application>
 
 </manifest>
