--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,17 @@
         <activity android:name=".Dinner_activity"/>
         <receiver android:name=".Notification_receiver_Dinner"/>
 
+
+
+
+
+
+
+        <activity android:name=".updateGrocery"/>
+        <activity android:name=".viewGrocery"/>
+        <activity android:name=".listGrocery"/>
+        <activity android:name=".addGrocery"/>
+
     </application>
 
 </manifest>
