--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:28.0.0"
 
 }
