--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".viewGrocery"/>
         <activity android:name=".listGrocery"/>
         <activity android:name=".addGrocery"/>
+        <activity android:name=".updateImageGrocery"/>
     </application>
 
 </manifest>
